# playground

./: .gitignore  README.md
.github/workflows/: test.yaml
explore-naoya-san-haskell/: README.md  naoya.hs
explore-rust/: README.md  loc-100-to-500.txt
github-diagram-test/: README.md  main.ts
github-projects-graphql/: create-custom-settings.sh  field-create.sh  field-read-all.sh  field-read-by-name.sh  get-id.sh
go-readability-playground/: go.mod  go.sum  main.go  result.md
go-slog/example-1/: go.mod  main.go
go-slog/example-2/: go.mod  main.go
go-slog/example-3/: go.mod  main.go
go-slog/example-4/: go.mod  main.go
go-with-bazel/: .gitignore  BUILD.bazel  MODULE.bazel  deps.bzl  go.mod  go.sum  graph.dot  tools.go
go-with-bazel/analyzers/sample/: BUILD.bazel  sample.go
go-with-bazel/apps/hello_world/: BUILD.bazel  main.go  os_darwin.go  os_linux.go  os_windows.go
go-with-bazel/internal/reverse/: BUILD.bazel  string.go  string_test.go
go-with-bazel/internal/windows/: BUILD.bazel  windows.go
kpt-simple/package/nginx/: Kptfile  README.md  nginx.yaml  setter-config.yaml
learn-go-with-tests/: go.mod  hello.go
mastra-playground/: package-lock.json  package.json
mastra-playground/src/mastra/: index.ts
mastra-playground/src/mastra/agents/: index.ts  mcpAgent.ts
mastra-playground/src/mastra/tools/: search.ts
migrate-simple-article-data/: .gitignore  README.md  deno.json  main.ts  main_test.ts
model-checking-book/: go.mod  kripke.go  main.go  mutex.dot  mutex.go  sample.dot  semantics.go  syntax.go  visualizer.go
nextjs-otel/: .gitignore  instrumentation.ts  package-lock.json  package.json
parse-xml/: atom.xml  feed.rss  go.mod  main.go
qwen3/: README.md  compose.yaml  index.ts  package-lock.json  package.json
repro-lintnet-lintnet-528/printarg-like-aqua-proxy/: go.mod  main.go
repro-lintnet-lintnet-528/printargs/: go.mod  main.go
repro-lintnet-lintnet-528/urfave-cli/: go.mod  main.go
scala-text/: README.md  mise.toml
scala-text/.devcontainer/: devcontainer.json
scala-text/example/: .scalafmt.conf  build.sbt
scala-text/example/project/: plugins.sbt
scala-text/example/src/main/scala/: AsyncBarrier.scala  AsyncCountDownLatch.scala  Calc.scala  Main.scala
scala-text/example/src/test/scala/: AsyncBarrierSpec.scala  AsyncCountDownLatchSpec.scala  CalcSpec.scala
try-go-capslock/: mise.toml
try-haskell/: CHANGELOG.md  README.md  Sort2.hs  Sort3.hs  Sort4.hs  Sort4b.hs  Sort5.hs  package.yaml  qsort.hs  try-haskell.cabal
try-hnsw/: README.md
try-hnsw/hnsw/: .gitignore  main.py  pyproject.toml
try-hnsw/hnsw-manim/: .gitignore  main.py  pyproject.toml
try-java26/: .gitignore  mise.toml
try-java26/.devcontainer/: Dockerfile  devcontainer.json
try-java26/codemod/: settings.gradle.kts
try-java26/codemod/app/: build.gradle.kts
try-java26/codemod/app/src/main/java/org/example/app/: App.java
try-java26/codemod/build-logic/src/main/kotlin/: buildlogic.java-common-conventions.gradle.kts
try-java26/codemod/docs/task/: paths-get-to-path-of.md
try-java26/codemod/paths-get-to-path-of/: README.md  build.gradle.kts
try-java26/codemod/paths-get-to-path-of/src/test/java/com/yourorg/java/migrate/: PathsGetToPathOfTest.java
try-kiro-cli-on-docker/: .gitignore  mise.toml
try-kiro-cli-on-docker/.devcontainer/: Dockerfile  devcontainer.json
try-kiro-cli-on-docker/.kiro/hooks/: cdk-diff.kiro.hook  name-and-tag.kiro.hook
try-kiro-cli-on-docker/.kiro/skills/cdk-list-resources/: SKILL.md
try-kiro-cli-on-docker/.kiro/skills/commit-message/: SKILL.md
try-kiro-cli-on-docker/docs/plan/: 1-example-app.old.md  2-naming-and-tagging.old.md
try-kiro-cli-on-docker/todo-app/: README.md  cdk.json  package-lock.json  package.json
try-kiro-cli-on-docker/todo-app/frontend/: index.html
try-kiro-cli-on-docker/todo-app/lambda/todo-api/: index.mjs
try-kiro-cli-on-docker/todo-app/lib/: todo-app-stack.ts
try-kiro-cli-on-docker/todo-app/lib/constructs/: api.ts  database.ts  frontend.ts
try-kiro-cli-on-docker/todo-app/test/: todo-app.test.ts
try-lean/LeanBook/: lakefile.lean
try-lean/LeanBook/LeanBook/FirstProof/: NaturalNumber.lean
try-lean/LeanBook/LeanBook/Logic/: PropLogic.lean
try-logic/taut/: Main.lean  README.md  Taut.lean  lake-manifest.json  lakefile.toml
try-logic/taut/Taut/: Basic.lean
try-prometheus-broken-instrumentation/: compose.yaml
try-prometheus-broken-instrumentation/app/: main.go
try-prometheus-broken-instrumentation/grafana/provisioning/dashboards/: resource.json
try-sops/: .gitignore  .sops.yaml  NOTE.md  env.json  fnox.toml  mise.toml  test.json.enc
try-ts-rs/: Cargo.toml
try-ts-rs/bindings/: Gender.ts  User.ts
try-ts-rs/src/: main.rs
try-wasip2/: .gitignore  Cargo.toml  exec.ts
try-wasip2/src/: greeting.rs  lib.rs
try-wasip2/wit/: world.wit
vuln-code-copilot-autofix/: main.go
