"""
This is a playground for developing application with Bazel.
"""

# このリポジトリの名前とバージョンを宣言する
module(
    name = "go-with-bazel",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")

bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid", "com_github_gostaticanalysis_nilerr", "org_golang_x_tools")

go_sdk.nogo(
    includes = [
        "//:__subpackages__",
    ],
    nogo = "//:my_nogo",
)
